--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~8.2.14",
     "@auth0/angular-jwt": "^5.0.2",
     "ng-inline-svg": "^12.0.0",
+    "ngx-page-scroll": "^7.0.4",
+    "ngx-page-scroll-core": "^7.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
