--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod",
+    "dev:ssr": "ng run sc-angular:serve-ssr",
+    "build:ssr": "ng build --prod && ng run sc-angular:server:production",
+    "serve:ssr": "node dist/server/main.js",
+    "prerender": "ng run sc-angular:prerender"
   },
   "private": true,
   "dependencies": {
